fixed modal overlap when hidden

--- a/packages/browser-wallet-ui/src/scss/_modals.scss
+++ b/packages/browser-wallet-ui/src/scss/_modals.scss
@@ -4,7 +4,7 @@
     pointer-events: none;
     z-index: -1;
     transition: all linear 0.2s;
-    height: auto;
+    height: 0;
     box-shadow: 0 1px 3px rgba(17, 20, 30, 0.1), 0 1px 2px rgba(17, 20, 30, 0.06);
 
     &:after {
